--- a/emmaispretty.html
+++ b/emmaispretty.html
@@ -4,4 +4,15 @@
 
 <body>
 Dances in the raaaaaaaaaaaaaain
+<i>this is italics</i>
+<b>This is bold</b>
+<u>This is underlined</u>
+// This is a comment
+
+<p> starts a paragraph body</p>
+<br> denotes a line break, but is now outdated code
+
+uuuuhhhhhhhmmmmm
+
+What is your opinion on poodles?
 </body>
